# Quetzalcoatl

./: README.md  vim_requirements.txt
mamba-1p1p1/mamba_ssm/ops/: selective_scan_interface.py
queenh/: pyproject.toml
quetzalcoatl/: LICENSE  pyproject.toml
quetzalcoatl/src/quetzalcoatl/: bimamba.py  models.py
quetzalcoatl/src/quetzalcoatl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vim/: models_mamba.py
